# primos

./: .gitignore  CMakeLists.txt  README.md  justfile
include/private/: benchmark.h  macros.h
include/public/: primos.h
src/: CMakeLists.txt
src/cli/: main.cc
src/lib/: benchmark.cc  primos.cc
